test/should-fail/javaLangImport.visage
/*
 * Verify java.lang classes must be imported.
 * 
 * @test/fail javaLangImport.visage
 */
System.out.println("hello, world"); // no java.lang.System import
